[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cells2visium"
version = "1.0"
dependencies = [
    "absl-py==2.1.0",
    "anndata==0.10.8",
    "array_api_compat==1.8",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "attrs==24.2.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "contourpy==1.2.1",
    "csbdeep==0.8.0",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "exceptiongroup==1.2.2",
    "executing==2.0.1",
    "fastjsonschema==2.20.0",
    "fire==0.6.0",
    "flatbuffers==24.3.25",
    "fonttools==4.53.1",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.65.1",
    "h5py==3.11.0",
    "idna==3.7",
    "imagecodecs==2024.6.1",
    "imageio==2.34.2",
    "ipython==8.12.3",
    "jedi==0.19.1",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter_client==8.6.2",
    "jupyter_core==5.7.2",
    "jupyterlab_pygments==0.3.0",
    "keras==3.4.1",
    "kiwisolver==1.4.5",
    "lazy_loader==0.4",
    "legacy-api-wrap==1.4",
    "libclang==18.1.1",
    "llvmlite==0.43.0",
    "Markdown==3.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.9.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "ml-dtypes==0.4.0",
    "namex==0.0.8",
    "natsort==8.4.0",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "networkx==3.3",
    "numba==0.60.0",
    "numpy==1.26.4",
    "opt-einsum==3.3.0",
    "optree==0.12.1",
    "packaging==24.1",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "patsy==0.5.6",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "pipreqs==0.5.0",
    "platformdirs==4.2.2",
    "prompt_toolkit==3.0.47",
    "protobuf==4.25.4",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "Pygments==2.18.0",
    "pynndescent==0.5.13",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "PyYAML==6.0.1",
    "pyzmq==26.1.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.7.1",
    "rpds-py==0.20.0",
    "scanpy==1.10.2",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "seaborn==0.13.2",
    "session-info==1.0.0",
    "six==1.16.0",
    "soupsieve==2.5",
    "stack-data==0.6.3",
    "stardist==0.9.1",
    "statsmodels==0.14.2",
    "stdlib-list==0.10.0",
    "tensorboard==2.17.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.17.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "tifffile==2024.7.24",
    "tinycss2==1.3.0",
    "tornado==6.4.1",
    "tqdm==4.66.4",
    "traitlets==5.14.3",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "umap-learn==0.5.6",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "Werkzeug==3.0.3",
    "wrapt==1.16.0",
    "yarg==0.1.9"
]
requires-python = "3.12.4"
authors = [
  {name = "Stanislaw Makarchuk", email = "stanislaw.makarchuk@sanger.ac.uk"}
]
maintainers = [
  {name = "Stanislaw Makarchuk", email = "stanislaw.makarchuk@sanger.ac.uk"}
]

description = "Segmenting H&E images from Visium to assign each Visium spot to the number of cell, occupancy and other morphological features of cells"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["cells2visium"]


[project.urls]
Homepage = "https://github.com/cellgeni/visium2cells"
Issues = "https://github.com/cellgeni/visium2cells/issues"