[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cells2visium"
version = "1.0"
dependencies = {file = ["requirements.txt"]}
requires-python = ">3.10"
authors = [
  {name = "Stanislaw Makarchuk", email = "stanislaw.makarchuk@sanger.ac.uk"}
]
maintainers = [
  {name = "Stanislaw Makarchuk", email = "stanislaw.makarchuk@sanger.ac.uk"}
]

description = "Segmenting H&E images from Visium to assign each Visium spot to the number of cell, occupancy and other morphological features of cells"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cells2visium"]


[project.urls]
Homepage = "https://github.com/cellgeni/visium2cells"
Issues = "https://github.com/cellgeni/visium2cells/issues"