[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cells2visium"]

[project]
name = "cells2visium"
version = "1.0"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
requires-python = ">3.10"
authors = [
  {name = "Stanislaw Makarchuk", email = "stanislaw.makarchuk@sanger.ac.uk"}
]
maintainers = [
  {name = "Stanislaw Makarchuk", email = "stanislaw.makarchuk@sanger.ac.uk"}
]

description = "Segmenting H&E images from Visium to assign each Visium spot to the number of cell, occupancy and other morphological features of cells"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cells2visium"]
classifiers = ["License :: OSI Approved :: MIT License", "Development Status :: 4 - Beta", "Topic :: Scientific/Engineering :: Bio-Informatics"]


[project.urls]
Homepage = "https://github.com/cellgeni/visium2cells"
Issues = "https://github.com/cellgeni/visium2cells/issues"